--- a/dm/Combinatories-Solve-06.tex
+++ b/dm/Combinatories-Solve-06.tex
@@ -51,7 +51,7 @@
 
 \begin{center}
   {\LARGE{\bf{组合数学作业}}}\\
-  {\large{\bf{第5次}}}\\
+  {\large{\bf{第6次}}}\\
 \end{center}
 
 \begin{kaishu}
@@ -59,9 +59,8 @@
 \end{kaishu}
 
 \begin{enumerate}
-  \item[1.] \textit{(2分)} 快速排序的期望时间复杂度有如下递推:
-    $$T(n) = \frac{1}{n}\sum_{k = 0}^{n - 1}\left(T(k) + T(n - k - 1)\right) + O(n)$$
-    求证$T(n) = O(n \cdot log(n))$。 \\
+  \item[1.] \textit{(2分)} 证明：正整数p是素数当且仅当
+     $$(p − 1)! \equiv −1 (mod p)$$
     \begin{proofs}{解:}
       由
       $$T(n) = \frac{1}{n}\sum_{k = 0}^{n - 1}\left(T(k) + T(n - k - 1)\right) + O(n)$$
